force-app/main/default/objects/custom_create91__c/custom_create91__c.object-meta.xml
<CustomObject>
    <label>Custom created object91</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects91</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>