force-app/main/default/objects/custom_create91__c/fields/custom_create_91field606__c.field-meta.xml
<CustomField>
    <fullName>custom_create_91field606__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 91field606</label>
    <type>Checkbox</type>
</CustomField>